examples/test/testpolicy5761.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5761
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key46: value47
      key47: value16
      key10: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value33
          key40: value22
      podSelector:
        matchLabels:
          key6: value5
          key18: value25
